# mathglyph_pages

./: .gitignore  README.md  pyproject.toml
configs/: clean_dense.json  matrix_table.json  noisy_scan.json  photo_distorted.json  smoke.json
docs/: datasets.md
examples/mathwriting_samples/: README.md
notebooks/: generation_examples.ipynb
src/mathglyph_pages/: __init__.py  cli.py  config.py  inkml.py  io.py  page.py  render.py
tests/: test_generation.py  test_inkml.py
tests/fixtures/tiny_mathwriting/synthetic/: matrix.inkml
tests/fixtures/tiny_mathwriting/train/: linear.inkml  quadratic.inkml
